[package]
name = "clove"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.5"
colored = "2"
dotenvy = "0.15.7"
diesel = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
